--- a/Cyrusportfolio/src/index.css
+++ b/Cyrusportfolio/src/index.css
@@ -10,7 +10,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#060606",endCo
   line-height: 1.5;
   font-weight: 400;
   /* color: rgba(255, 255, 255, 0.87); */
-  color:white;
+  color:#efe9f4;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -67,13 +67,10 @@ border-radius: 10px;
 
 }
 
-.education{
-
-}
 
 
 .stack{
-  color:rgb(255, 0, 0);
+  color:#16bac5
 }
 .Skillframe{
 
