--- a/Cyrusportfolio/src/index.css
+++ b/Cyrusportfolio/src/index.css
@@ -1,7 +1,7 @@
 :root {
-    --color-primary: #1e2f3f;
-  --color-accent: #5D2B1C;
-   --color-background: #020202;
+    --color-primary: #797476;
+  --color-accent: #3a1b17;
+   --color-background: #131313;
     --color-text: white;
 }
 
