--- a/Cyrusportfolio/src/index.css
+++ b/Cyrusportfolio/src/index.css
@@ -1,7 +1,8 @@
 :root {
-    --color-primary: #797476;
-  --color-accent: #3a1b17;
-   --color-background: #131313;
+    --color-primary: #314252;
+  --color-accent: #563122;
+   --color-background: #0D1016; 
+   --color-sub-background:#08090D;
     --color-text: white;
 }
 
@@ -29,6 +30,8 @@ h2 {
   font-weight: 600;
 }
 
+
+
 p {
   font-size: 1rem;
   line-height: 1.6;
@@ -40,12 +43,12 @@ p {
 
 
 .bio-button{
-  background: var(--color-primary);
+  background: var(--color-sub-background);
 color: var(--color-text);
 }
 
 .bio-button:hover{
-  background: var(--color-accent) ;
+    background: var(--color-primary);
   color: var(--color-text);
 
 }
@@ -58,9 +61,26 @@ color: var(--color-text);
 }
 .bio-icon{
     color: var(--color-text);
+      background: var(--color-sub-background)
 }
 .bio-icon:hover{
     color: var(--color-accent);
+
+}
+
+.port-menu{
+ color: var(--color-text);
+      background: var(--color-sub-background)
+}
+
+.port-menu:hover{
+  color: var(--color-accent);
+     background: var(--color-sub-background)
+
+}
+
+.progress-bar{
+  background:  var(--color-primary); ;
 }
 .resumelink{
   
@@ -75,8 +95,28 @@ color: var(--color-text);
   
 }
 
+ .vr-thick {
+    width: 4px !important; /* Adjust the thickness here */
+    background: var(--color-text) ; /* Keeps it in line with text color */
+  }
 .nav-link{
   color: var(--color-text);
+   font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+.nav-menu{
+  color: var(--color-text);
+   font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+
+.nav-menu:hover{
+  color: var(--color-text);
+  background-color:var(--color-primary) ;
+   font-size: 1.3rem;
+  line-height: 1.6;
 }
 
 .features{
@@ -92,7 +132,9 @@ color: var(--color-text);
   background-color: rgb(219, 28, 28);;
 }
 
-
+.form-text{
+background:var(--color-primary) ;
+}
 
 .Educationframe{
 margin: 10px;
@@ -116,8 +158,14 @@ border-radius: 5px;
 margin:30px;
 width:300px;
 height:300px;
-}
+background: var(--color-sub-background);
 
+}
+.skill-text{
+  background: var(--color-sub-background) ;
+  
+  
+}
 .Projectframe{
   position: relative;
  border-radius: 5px;
