--- a/Cyrusportfolio/src/index.css
+++ b/Cyrusportfolio/src/index.css
@@ -1,6 +1,6 @@
 :root {
     --color-primary: #314252;
-  --color-accent: #563122;
+  --color-accent: #3B82F6;
    --color-background: #0D1016; 
    --color-sub-background:#08090D;
     --color-text: white;
